Resolving issue with characters not visible when editing attributes; resolves #92

--- a/app/styles/modules/_common-styles.scss
+++ b/app/styles/modules/_common-styles.scss
@@ -586,6 +586,11 @@ $accent                 // Accent / Highlight
     .CodeMirror .CodeMirror-selectedtext:not(.CodeMirror-persist-highlight) {
       color: white !important;
     }
+
+    #elements-content ::shadow .selected .being-edited.editing {
+        color: #333 !important;
+    }
+    
     .CodeMirror-selected {
       background: $selectors;
     }
